@@ -1,3 +1,7 @@
+2011-04-18  6.6.9-6 Glenn Randers-Pehrson <glennrp@image...>
+  * Added "-define PNG:preserve-colormap" option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18564I)
+
 2011-04-16  6.6.9-6 Cristy  <quetzlzacatenango@image...>
   * Support the HDR 32-bit_rle_xyze format.
   * Added "date" to the things that can appear on the -define PNG:exclude-chunk
